--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,12 @@
   font-style: italic;
   font-size: 10px;
 }
+
+.cardstack-highlight {
+  background-color:#FFFF00;
+}
+
+.cardstack-highlight:hover {
+  text-decoration:underline;
+  cursor: pointer;
+}
