--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     border-style: solid;
     border-width: 1px;
     border-color: gray;
-    box-shadow: 0px 0px 10px #888888;
+    box-shadow: 0px 0px 15px #888888;
     background-color: white;
     width: 400px;
     position:absolute;
@@ -22,12 +22,34 @@
   border:0;
 }
 
+.pane-main {
+
+}
+
+.branding {
+  background-color: #dbdbdb;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 24px;
+}
+
+.branding p {
+  margin: .5em 1em .5em 1em;
+  color: #2a2a2a;
+  font-family: Arial, sans-serif;
+  font-size: 11px;
+}
+.context-logo {
+  font-weight: bold;
+}
+
 .pane-content {
     font-family: Arial, sans-serif;
     padding-top: 10px;
-    padding-right: 30px;
+    padding-right: 20px;
     padding-bottom: 25px;
-    padding-left: 30px;
+    padding-left: 20px;
 }
 
 .pane-content img {
