Fixes highlight functionality, and minor tweaks
Highlights needed to be fixed after moving the hoverPane got overhauled.
Also tweaks branding a bit, and fixes a cardstack url

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
 }
 
 .branding p {
-  margin: .5em 1em 1em 1em;
+  margin-left: 1em;
   color: #2a2a2a;
   font-family: Arial, sans-serif;
   font-size: 11px;
