--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,10 @@
   border:0;
 }
 
-.pane-main {
-
+.pane-body {
+  height: 200px;
+  width: 400px;
+  overflow: auto;
 }
 
 .branding {
@@ -46,10 +48,10 @@
 
 .pane-content {
     font-family: Arial, sans-serif;
-    padding-top: 10px;
-    padding-right: 20px;
-    padding-bottom: 25px;
-    padding-left: 20px;
+    margin-top: 10px;
+    margin-right: 20px;
+    margin-bottom: 25px;
+    margin-left: 20px;
 }
 
 .pane-content img {
