--- a/styles.css
+++ b/styles.css
@@ -33,21 +33,24 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 24px;
+  height: 1.5em;
 }
 
 .branding p {
-  margin-left: 1em;
+  position:relative;
+  top: -.5em;
+  left: 1em;
   color: #2a2a2a;
-  font-family: Arial, sans-serif;
-  font-size: 11px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: .7em;
 }
 .context-logo {
+  font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
 }
 
 .pane-content {
-    font-family: Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin-top: 10px;
     margin-right: 20px;
     margin-bottom: 25px;
@@ -85,7 +88,7 @@
   cursor: pointer;
 }
 
-.spinnerHolder {
+.spinnerContainer {
   position:relative;
   top:0;
   height: 150px;
