--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
     border-color: gray;
     box-shadow: 0px 0px 15px #888888;
     background-color: white;
+    width: 400px;
     position:absolute;
 
     /* The z-index must be comically large because this is an extension.
@@ -23,6 +24,7 @@
 
 .pane-body {
   height: 0px;
+  width: 400px;
   overflow: auto;
 }
 
