--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
   overflow: auto;
 }
 
-.branding {
+.context-branding {
   background-color: #dbdbdb;
   position: absolute;
   bottom: 0;
@@ -36,7 +36,7 @@
   height: 1.5em;
 }
 
-.branding p {
+.context-branding p {
   text-align: center;
   position:relative;
 /*  top: -.5em;
@@ -52,10 +52,11 @@
   font-weight: normal;
 }
 .context-logo {
-  font-family: 'Computer Modern', sans-serif;
-  font-size: 1em;
-  color: #2a2a2a;
+  font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
+  font-size: 1.2em;
+  text-transform: lowercase;
+
   /* zero out some values so that host pages can't affect them */
   line-height: normal;
 }
