--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,4 @@
 /* Styles for context pane */
-#lipsum {
-    width:500px;
-}
-
 .hover-pane {
     border-style: solid;
     border-width: 1px;
@@ -28,22 +24,22 @@
   overflow: auto;
 }
 
-.context-branding {
+.pane-branding {
   background-color: #dbdbdb;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 1.5em;
 }
 
-.context-branding p {
-  text-align: center;
+.pane-branding p {
   position:relative;
-/*  top: -.5em;
-*/  color: #2a2a2a;
+  color: #2a2a2a;
   font-family: 'Open Sans', sans-serif;
   font-size: .6em;
-
+  padding-right: .6em;
+  padding-left: .6em;
+  padding-top: .1em;
+  padding-bottom: .1em;
 
   /* zero out some values so that host pages can't affect them */
   margin-bottom: 0em;
@@ -86,7 +82,18 @@
   margin-top: 15px;
   font-family: 'Open Sans', sans-serif;
   font-size: .9em;
-  clear:left;
+}
+
+#branding-attribution {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+#branding-blacklist-link {
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 .error {
