--- a/templates/tutorial-intro.html
+++ b/templates/tutorial-intro.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <div class="tutorial pane-content">
-      <!-- Template for intro pane of Context tutorial -->
-      <!-- Because this is used in a hoverpane, it is just a fragment -->
-      <p>Hey there! It looks like this is your first time using Context. Would you like
-          a quick intro?</p>
-      <button type="button" id="never">Don't show this again</button>
-      <button type="button" id="not-now">Not now</button>
-      <button type="button" id="yes">Show me the ropes</button>
-    </div>
-  </body>
-</html>
+<div class="tutorial pane-content" style="height: 250px;">
+  <!-- Template for intro pane of Context tutorial -->
+  <!-- Because this is used in a hoverpane, it is just a fragment -->
+  <p>Hey there! It looks like this is your first time using Context. Would you like
+      a quick intro?</p>
+  <button type="button" id="context-never">Don't show this again</button>
+  <button type="button" id="context-not-now">Not now</button>
+  <button type="button" id="context-yes">Show me the ropes</button>
+</div>
