Changed tutorial to use iframes
Back to how successful tutorial was at time of previous commit

--- a/templates/tutorial-intro.html
+++ b/templates/tutorial-intro.html
@@ -1,11 +1,16 @@
-<div class="pane-content" style="height: 250px;">
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="../styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../styles/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="../styles/tutorial.css">
+    <script src="../scripts/tutorial-intro.js" defer></script>
+  </head>
+<div>
   <div class="tutorial">
-    <!-- Template for intro pane of Context tutorial -->
-    <!-- Because this is used in a hoverpane, it is just a fragment -->
     <p>Hey there! It looks like this is your first time using Context. Would you like
         a quick intro?</p>
-    <button type="button" id="context-never">Don't show this again</button>
-    <button type="button" id="context-not-now">Not now</button>
-    <button type="button" id="context-step1">Show me the ropes</button>
+    <button type="button" id="never">Don't show this again</button>
+    <button type="button" id="not-now">Not now</button>
+    <button type="button" id="step1">Show me the ropes</button>
   </div>
 </div>
