--- a/templates/tutorial1.html
+++ b/templates/tutorial1.html
@@ -1,4 +1,10 @@
-<div class="pane-content" style="height: 400px">
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="../styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../styles/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="../styles/tutorial.css">
+    <script src="../scripts/tutorial1.js" defer></script>
+  </head>
   <div class="tutorial">
     <h2>The basics</h2>
     <p>Tell Me More is a tool that lets you look up terms in Wikipedia without
