--- a/styles/tutorial.css
+++ b/styles/tutorial.css
@@ -1,8 +1,11 @@
+html {
+  padding-bottom: 0px;
+}
 .tutorial {
   position: relative;
   margin-top: 20px;
   margin-right: 20px;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   margin-left: 20px;
 }
 
