Add support for creating iframes in tutorial
Doesn't work by default, because content script does not run in iframe

--- a/templates/tutorial1.html
+++ b/templates/tutorial1.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" type="text/css" href="../styles/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../styles/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="../styles/tutorial.css">
+    <script src="../scripts/jquery-2.1.1.min.js" defer></script>
+    <script src="../scripts/utilities.js" defer></script>
     <script src="../scripts/tutorial1.js" defer></script>
   </head>
   <div class="tutorial">
@@ -14,9 +16,8 @@
     <p class="well">In his 2015 State of the Union address, President Obama
       discussed a variety of topics ranging from policy in Iran to tax loopholes
       at home.</p>
-    <p>The president's not the only term in that snippet -- 'Iran', 'tax loopholes', and
-      'State of the Union address' all work. The only limitation is what's found in
-      Wikipedia.</p>
+    <p>There are plenty of other terms in that snippet -- try selecting any
+      of them. The only limitation is what's found in Wikipedia.</p>
     <button class="next-button" type="button" id="context-step2">
       Next</button>
   </div>
