--- a/templates/tutorial1.html
+++ b/templates/tutorial1.html
@@ -11,13 +11,16 @@
     <h2>The basics</h2>
     <p>Tell Me More is a tool that lets you look up terms in Wikipedia without
       navigating away from the page you're on. Try it out by selecting
-      "President Obama" in the text below (just click and drag,
-      like you would if you wanted to copy it).</p>
+      "President Obama" in the text below (just click and drag).</p>
+    <br/>
     <p class="well">In his 2015 State of the Union address, President Obama
       discussed a variety of topics ranging from policy in Iran to tax loopholes
       at home.</p>
-    <p>There are plenty of other terms in that snippet -- try selecting any
-      of them. The only limitation is what's found in Wikipedia.</p>
+    <p>Once you're done, click anywhere outside the info card to dismiss it.
+      </p>
+    <p>Obama's not the only term in that snippet above. "2015", "State of the
+      Union", "tax loopholes"...if it's in Wikipedia, Tell
+      Me More will find it.</p>
     <button class="next-button" type="button" id="context-step2">
       Next</button>
   </div>
