corrects some branding, minor style tweaks

--- a/templates/tutorial3.html
+++ b/templates/tutorial3.html
@@ -20,7 +20,7 @@
     </p>
     <br/>
     <p>When auto-show has been disabled, you can still look up terms by
-      right-clicking a selection and selecting "Tell Me More...".</p>
+      right-clicking a selection and selecting "Tell me more...".</p>
     <br/>
     <button class="next-button" type="button" id="context-tutorial-end">
       That's it!</button>
