Tutorial fully works
Fixed a placement issue regarding body margins, the context menu not
working from inside iframe, and hovercards being dismissed too easily

--- a/templates/tutorial2.html
+++ b/templates/tutorial2.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/tutorial.css">
     <script src="../scripts/jquery-2.1.1.min.js" defer></script>
     <script src="../scripts/utilities.js" defer></script>
+    <script src="../scripts/tutorialCore.js" defer></script>
     <script src="../scripts/tutorial2.js" defer></script>
   </head>
   <div class="tutorial">
