--- a/templates/tutorial-intro.html
+++ b/templates/tutorial-intro.html
@@ -7,10 +7,15 @@
   </head>
 <div>
   <div class="tutorial">
-    <p>Hey there! It looks like this is your first time using Context. Would you like
-        a quick intro?</p>
-    <button type="button" id="never">Don't show this again</button>
-    <button type="button" id="not-now">Not now</button>
-    <button type="button" id="step1">Show me the ropes</button>
+    <div class="header">
+      <span class="glyphicon glyphicon-remove" id="exit-button"></span>
+    </div>
+    <p>Hey there! It looks like this is your first time using Tell Me More.
+      Would you like a quick intro?</p>
+
+    <button type="button" id="never" style="float: left">Don't show this
+      again</button>
+    <button type="button" id="step1" style="float: right">Show me the ropes
+      </button>
   </div>
 </div>
