--- a/templates/tutorial1.html
+++ b/templates/tutorial1.html
@@ -9,6 +9,7 @@
     <script src="../scripts/tutorial1.js" defer></script>
   </head>
   <div class="tutorial">
+    <span class="glyphicon glyphicon-remove" id="exit-button"></span>
     <h2>The basics</h2>
     <p>Tell Me More is a tool that lets you look up terms in Wikipedia without
       navigating away from the page you're on. Try it out by selecting
