--- a/templates/tutorial2.html
+++ b/templates/tutorial2.html
@@ -9,6 +9,7 @@
     <script src="../scripts/tutorial2.js" defer></script>
   </head>
   <div class="tutorial">
+    <span class="glyphicon glyphicon-remove" id="exit-button"></span>
     <h2>Partial selections</h2>
     <p>For a lot of us, precise text selection is a pain. Don't worry about it
       -- as long as you select part of the words you want to look up, Tell Me
