--- a/templates/tutorial3.html
+++ b/templates/tutorial3.html
@@ -9,6 +9,7 @@
     <script src="../scripts/tutorial3.js" defer></script>
   </head>
   <div class="tutorial">
+    <span class="glyphicon glyphicon-remove" id="exit-button"></span>
     <h2>Disabling auto-show</h2>
     <p>By default, Tell Me More will show you an info pane whenever you select
       text (unless it's more than five words). While it's nice to be able to
