--- a/styles/hover-pane.css
+++ b/styles/hover-pane.css
@@ -3,6 +3,7 @@
     border-style: solid;
     border-width: 1px;
     border-color: gray;
+    box-sizing: content-box;
     box-shadow: 0px 0px 15px #888888;
     background-color: white;
     width: 400px;
