Overhaul of branding sections, and some bugfixes
-Branding sections at the bottom of panes are now shown in iframes, to
stop css from the host page from coming in
-Name has been changed to Tell me more
-Colored branding and borders have been added
-Buttons in tutorial have been colored to match branding
-Fonts have been added for new branding
-Fixed bug where 'add to blacklist' failed in the tutorial (also part of
the branding changes)

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -7,32 +7,15 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-/* latin */
-@font-face {
-  font-family: 'Ubuntu';
-  font-style: normal;
-  font-weight: 500;
-  src: local('Ubuntu Medium'), local('Ubuntu-Medium'), url(http://fonts.gstatic.com/s/ubuntu/v7/OsJ2DjdpjqFRVUSto6IffBJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
 
 @font-face {
-  font-family: "Computer Modern";
-  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');
-}
-@font-face {
-  font-family: "Computer Modern";
-  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsx.otf');
-  font-weight: bold;
-}
-@font-face {
-  font-family: "Computer Modern";
-  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsi.otf');
-  font-style: italic, oblique;
-}
-@font-face {
-  font-family: "Computer Modern";
-  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunbxo.otf');
-  font-weight: bold;
-  font-style: italic, oblique;
+    font-family: 'Museo';
+    src: url('../fonts/museo_500_macroman/Museo500-Regular-webfont.eot');
+    src: url('../fonts/museo_500_macroman/Museo500-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/museo_500_macroman/Museo500-Regular-webfont.woff2') format('woff2'),
+         url('../fonts/museo_500_macroman/Museo500-Regular-webfont.woff') format('woff'),
+         url('../fonts/museo_500_macroman/Museo500-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/museo_500_macroman/Museo500-Regular-webfont.svg#museo500') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
