--- a/templates/tutorial1.html
+++ b/templates/tutorial1.html
@@ -23,7 +23,7 @@
     <p>Obama's not the only term in that snippet above. "2015", "State of the
       Union", "tax loopholes"...if it's in Wikipedia, Tell
       Me More will find it.</p>
-    <button class="next-button" type="button" id="context-step2">
-      Next</button>
+    <button class="next-button btn btn-primary" type="button"
+        id="context-step2">Next</button>
   </div>
 </div>
