--- a/templates/tutorial3.html
+++ b/templates/tutorial3.html
@@ -24,7 +24,7 @@
     <p>When auto-show has been disabled, you can still look up terms by
       right-clicking a selection and selecting "Tell me more...".</p>
     <br/>
-    <button class="next-button" type="button" id="context-tutorial-end">
-      That's it!</button>
+    <button class="next-button btn btn-primary" type="button"
+        id="context-tutorial-end">That's it!</button>
   </div>
 </div>
