--- a/templates/tutorial-intro.html
+++ b/templates/tutorial-intro.html
@@ -13,9 +13,9 @@
     <p>Hey there! It looks like this is your first time using Tell Me More.
       Would you like a quick intro?</p>
 
-    <button type="button" id="never" style="float: left">Don't show this
-      again</button>
-    <button type="button" id="step1" style="float: right">Show me the ropes
-      </button>
+    <button class="btn btn-default" type="button" id="never"
+        style="float: left">Don't show this again</button>
+    <button class="btn btn-primary" type="button" id="step1"
+        style="float: right">Show me the ropes</button>
   </div>
 </div>
