--- a/templates/tutorial2.html
+++ b/templates/tutorial2.html
@@ -19,7 +19,7 @@
     <p class="well">In his 2015 State of the Union address, President Obama
       discussed a variety of topics ranging from policy in Iran to tax loopholes
       at home.</p>
-    <button class="next-button" type="button" id="context-step3">
-      Next</button>
+    <button class="next-button btn btn-primary" type="button"
+        id="context-step3">Next</button>
   </div>
 </div>
