--- a/templates/tutorial-intro.html
+++ b/templates/tutorial-intro.html
@@ -9,12 +9,11 @@
     <div class="header">
       <span class="glyphicon glyphicon-remove" id="exit-button"></span>
     </div>
-    <p>Hey there! It looks like this is your first time using Tell Me More.
-      Would you like a quick intro?</p>
+    <p>First time using Tell Me More? Take a quick tutorial.</p>
 
     <button class="btn btn-default" type="button" id="never"
         style="float: left">Don't show this again</button>
     <button class="btn btn-primary" type="button" id="step1"
-        style="float: right">Show me the ropes</button>
+        style="float: right">Let's get started</button>
   </div>
 </div>
