--- a/templates/tutorial1.html
+++ b/templates/tutorial1.html
@@ -7,21 +7,15 @@
     <script src="../scripts/tutorialCore.js" defer></script>
     <script src="../scripts/tutorial1.js" defer></script>
   </head>
-  <div class="tutorial">
-    <span class="glyphicon glyphicon-remove" id="exit-button"></span>
-    <h2>The basics</h2>
-    <p>Tell Me More is a tool that lets you look up terms in Wikipedia without
-      navigating away from the page you're on. Try it out by selecting
-      "President Obama" in the text below (just click and drag).</p>
-    <br/>
-    <p class="well">In his 2015 State of the Union address, President Obama
-      discussed a variety of topics ranging from policy in Iran to tax loopholes
-      at home.</p>
-    <p>Once you're done, click anywhere outside the info card to dismiss it.
-      </p>
-    <p>Obama's not the only term in that snippet above. "2015", "State of the
-      Union", "tax loopholes"...if it's in Wikipedia, Tell
-      Me More will find it.</p>
+  <div class="tutorial tutorial-main">
+    <div class="header">
+      <span class="glyphicon glyphicon-remove" id="exit-button"></span>
+    </div>
+    <h3>Wikipedia in the page you're on</h3>
+    <p>Select text to look it up. Try selecting "Boko Haram" below (click and
+    drag, just like if you wanted to copy it).<p>
+    <p class="well">Last Thursday night, Nigerian troops rescued 160 children
+        from Boko Haram.</p>
     <button class="next-button btn btn-primary" type="button"
         id="context-step2">Next</button>
   </div>
