--- a/templates/tutorial2.html
+++ b/templates/tutorial2.html
@@ -7,17 +7,17 @@
     <script src="../scripts/tutorialCore.js" defer></script>
     <script src="../scripts/tutorial2.js" defer></script>
   </head>
-  <div class="tutorial">
-    <span class="glyphicon glyphicon-remove" id="exit-button"></span>
-    <h2>Partial selections</h2>
-    <p>For a lot of us, precise text selection is a pain. Don't worry about it
-      -- as long as you select part of the words you want to look up, Tell Me
-      More will search for the whole phrase. Try just selecting part of any of
-      the terms below ("ate of the Un", for instance).</p>
-    <br/>
-    <p class="well">In his 2015 State of the Union address, President Obama
-      discussed a variety of topics ranging from policy in Iran to tax loopholes
-      at home.</p>
+  <div class="tutorial tutorial-main">
+    <div class="header">
+      <span class="glyphicon glyphicon-remove" id="exit-button"></span>
+    </div>
+    <h3>No precision required</h3>
+    <p>Tell Me More understands incomplete selections as well. Select only part
+    of a phrase ("ko Har", for instance).</p>
+    <p class="well">Last Thursday night, Nigerian troops rescued 160 children
+        from Boko Haram.</p>
+    <button class="prev-button btn btn-primary" type="button"
+        id="context-step1">Prev</button>
     <button class="next-button btn btn-primary" type="button"
         id="context-step3">Next</button>
   </div>
