--- a/templates/branding.html
+++ b/templates/branding.html
@@ -10,6 +10,6 @@
   <div class="branding">
     <p class="logo"><span class="logo-first-char">T</span>ell me more</p>
     <p><a id="blacklist-link" href="#">
-      Don't show context for this page</a></p>
+      Don't show hovercards for this page</a></p>
   </div>
 </body>
