--- a/templates/branding.html
+++ b/templates/branding.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="branding">
-    <p class="logo"><span class="logo-first-char">T</span>ell me more</p>
+    <p class="signature">Powered by<span class="logo">
+      <span class="logo-first-char">T</span>ell me more</span></p>
     <p><a id="blacklist-link" href="#">
       Don't show hovercards for this page</a></p>
   </div>
