--- a/templates/tutorial-branding.html
+++ b/templates/tutorial-branding.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <div class="branding">
-    <p class="logo"><span class="logo-first-char">T</span>ell me more</p>
+    <p class="signature">
+      <span class="logo"><span class="logo-first-char">
+      T</span>ell me more</span>
+    </p>
   </div>
 </body>
