--- a/templates/tutorial-intro.html
+++ b/templates/tutorial-intro.html
@@ -2,6 +2,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../styles/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../styles/tutorial.css">
+    <script src="../scripts/jquery-2.1.1.min.js" defer></script>
+    <script src="../scripts/iframe-utils.js" defer></script>
     <script src="../scripts/tutorial-intro.js" defer></script>
   </head>
 <div>
