tutorial example changed

--- a/templates/tutorial1.html
+++ b/templates/tutorial1.html
@@ -13,10 +13,10 @@
       <span class="glyphicon glyphicon-remove" id="exit-button"></span>
     </div>
     <h3>Wikipedia in the page you're on</h3>
-    <p>Select text to look it up. Try selecting "Boko Haram" below (click and
-    drag, just like if you wanted to copy it).<p>
-    <p class="well">Last Thursday night, Nigerian troops rescued 160 children
-        from Boko Haram.</p>
+    <p>Select text to look it up. Try selecting "Opportunity rover" below
+        (click and drag, just like if you wanted to copy it).<p>
+    <p class="well">Despite being launched over a decade ago, the Opportunity
+      rover continues to explore Mars and send data back to NASA.</p>
     <button class="next-button btn btn-primary" type="button"
         id="context-step2">Next</button>
   </div>
