--- a/templates/tutorial2.html
+++ b/templates/tutorial2.html
@@ -14,9 +14,9 @@
     </div>
     <h3>No precision required</h3>
     <p>Tell Me More understands incomplete selections as well. Select only part
-    of a phrase ("ko Har", for instance).</p>
-    <p class="well">Last Thursday night, Nigerian troops rescued 160 children
-        from Boko Haram.</p>
+    of a word or phrase ("unity rov", for instance).</p>
+    <p class="well">Despite being launched over a decade ago, the Opportunity
+      rover continues to explore Mars and send data back to NASA.</p>
     <button class="prev-button btn btn-primary" type="button"
         id="context-step1">Prev</button>
     <button class="next-button btn btn-primary" type="button"
