--- a/templates/tutorial3.html
+++ b/templates/tutorial3.html
@@ -17,8 +17,8 @@
     <a id="options-link" target="_blank">options</a>.</p>
     <p>Tell me more can still be accessed in the right-click menu. Select some
     text below, right click, and select "Tell me more".</p>
-    <p class="well sample-text">Last Thursday night, Nigerian troops rescued 160
-        children from Boko Haram.</p>
+    <p class="well">Despite being launched over a decade ago, the Opportunity
+      rover continues to explore Mars and send data back to NASA.</p>
     <button class="prev-button btn btn-primary" type="button"
         id="context-step2">Prev</button>
     <button class="next-button btn btn-primary" type="button"
