Blacklist domains instead of individual pages

--- a/templates/branding.html
+++ b/templates/branding.html
@@ -13,6 +13,6 @@
       T</span>ell me more</span>
     </p>
     <p><a id="blacklist-link" href="#">
-      Don't show hovercards for this page</a></p>
+      Don't show hovercards for this domain</a></p>
   </div>
 </body>
