Demo sentence now fits in tutorial nicely

--- a/templates/tutorial1.html
+++ b/templates/tutorial1.html
@@ -15,8 +15,10 @@
     <h3>Wikipedia in the page you're on</h3>
     <p>Select text to look it up. Try selecting "Opportunity rover" below
         (click and drag, just like if you wanted to copy it).<p>
-    <p class="well">Despite being launched over a decade ago, the Opportunity
-      rover continues to explore Mars and send data back to NASA.</p>
+    <p></p>
+    <p class="well">While originally meant to run for ninety days, the
+      Opportunity rover has been exploring Mars and sending data to NASA
+      for over a decade.</p>
     <button class="next-button btn btn-primary" type="button"
         id="context-step2">Next</button>
   </div>
