--- a/templates/tutorial2.html
+++ b/templates/tutorial2.html
@@ -15,8 +15,10 @@
     <h3>No precision required</h3>
     <p>Tell Me More understands incomplete selections as well. Select only part
     of a word or phrase ("unity rov", for instance).</p>
-    <p class="well">Despite being launched over a decade ago, the Opportunity
-      rover continues to explore Mars and send data back to NASA.</p>
+    <p></p>
+    <p class="well">While originally meant to run for ninety days, the
+      Opportunity rover has been exploring Mars and sending data to NASA
+      for over a decade.</p>
     <button class="prev-button btn btn-primary" type="button"
         id="context-step1">Prev</button>
     <button class="next-button btn btn-primary" type="button"
