--- a/templates/tutorial3.html
+++ b/templates/tutorial3.html
@@ -17,7 +17,7 @@
     <a id="options-link" target="_blank">options</a>.</p>
     <p>Tell me more can still be accessed in the right-click menu. Select some
     text below, right click, and select "Tell me more".</p>
-    <p class="well">Despite being designed for a ninety day mission, the
+    <p class="well">While originally meant to run for ninety days, the
       Opportunity rover has been exploring Mars and sending data to NASA
       for over a decade.</p>
     <button class="prev-button btn btn-primary" type="button"
